# gameclient

./: .envrc  .gitignore  .gitmodules  Justfile  Makefile  README.md  compile_commands.json  diagramm.puml  flake.nix
.github/workflows/: build.yml
client-c/: Justfile
client-c/include/: camera.h  environment.h  game.h  movement.h  packet.h  ui.h
client-c/src/: environment.c  game.c  ui.c
client-rs/: Cargo.toml  bacon.toml
client-rs/src/: game.rs  main.rs  network.rs  packet.rs
client-rs/src/game/: camera.rs  environment.rs  jump.rs  player.rs  state.rs
client-rs/src/network/: tcp.rs  udp.rs
client-rs/src/packet/: flags.rs  from_bytes.rs  packet_type.rs  to_bytes.rs  types.rs  v0.rs  version.rs
client-rs/src/packet/types/: player_init.rs  session_init.rs
include/: environment.h  game.h  network.h  ui.h
server/: go.mod  main.go  main.go.old
server/internal/client/: client.go
server/internal/server/: packets.go  server.go  tcp.go  udp.go
src/: camera.c  environment.c  game.c  main.c  movement.c  network.c  packet.c  ui.c
