[package]
name = "client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
raylib = { version = "5.0.2", features = ["wayland"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
bytes = "1"
bitflags = { version = "2.7.0", features = ["serde"] }
uuid = "1.11.1"
log = "0.4.22"
env_logger = "0.11.6"
